Code jusqu a Naissance et Mort (pop_next) Léonard Tom

--- a/JN_Mars.ipynb
+++ b/JN_Mars.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "28"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 624,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,17 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 672,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({0: 0, 10: 0, 20: 50, 30: 50, 40: 10, 50: 5, 60: 0, 70: 0, 80: 0, 90: 0},\n",
-       " {0: 31, 10: 0, 20: 0, 30: 50, 40: 50, 50: 10, 60: 5, 70: 0, 80: 0, 90: 0})"
+       "{0: 27, 10: 0, 20: 0, 30: 50, 40: 50, 50: 10, 60: 5, 70: 0, 80: 0, 90: 0}"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 672,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +262,190 @@
     "\n",
     "pop_decade(pop_init,p)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On introduit ensuite à l'aide d'un dictionnaire les probabilités de mortalités."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 626,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionnaire représentant la distribution de probabilité de mourir.\n",
+    "# clef = age et valeur = probabilité\n",
+    "\n",
+    "pmort = {0 : 0.2,\n",
+    "    10 : 0.05,\n",
+    "    20 : 0.05,\n",
+    "    30 : 0.1,\n",
+    "    40 : 0.15,\n",
+    "    50 : 0.18,\n",
+    "    60 : 0.25,\n",
+    "    70 : 0.31,\n",
+    "    80 : 0.60,\n",
+    "    90 : 1.0}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puis on fait une fonction plata_o_plomo qui donne avec le dictionnaire précédent si un indivudu est mort ou pas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 627,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 627,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def plata_o_plomo(pmort, age):\n",
+    "    '''\n",
+    "    dict[int:float]*int->int\n",
+    "    renvoie 0 si vivant et 1 si mort\n",
+    "    '''\n",
+    "    u = np.random.random()\n",
+    "    if u < pmort[age]:\n",
+    "            return 1\n",
+    "    else :\n",
+    "        return 0\n",
+    "plata_o_plomo(pmort,30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puis on créé une fonction qui va nous donner le nombre de mort pour une generation (decade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 666,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 666,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mort_gen(pmort, nb_gen, age):\n",
+    "    '''\n",
+    "    dict[int:float]*int*int->int\n",
+    "    Renvoie le nombre de mort d'une generation \n",
+    "    '''\n",
+    "    i = 0\n",
+    "    morts = 0\n",
+    "    while i < nb_gen:\n",
+    "        morts += plata_o_plomo(pmort, age)\n",
+    "        i += 1\n",
+    "    return morts\n",
+    "\n",
+    "mort_gen(pmort, 50, 30)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On fait ensuite passer l'ensemble des générations de la population dans la fonction pour avoir le nombre de gens en vie à la decade suivante (toujours avec l'accent svp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 671,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 10: 0, 20: 45, 30: 39, 40: 9, 50: 4, 60: 0, 70: 0, 80: 0, 90: 0}"
+      ]
+     },
+     "execution_count": 671,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pop_vivante(pmort, pop):\n",
+    "    '''\n",
+    "    dict[int:float]*dict[int:int]->dict[int:int]\n",
+    "    Renvoie la population moins les morts\n",
+    "    '''\n",
+    "    \n",
+    "    pop_ev_ok = {}\n",
+    "    i = 0\n",
+    "    for i in pop :\n",
+    "        pop_ev_ok[i] = pop[i] - mort_gen(pmort, pop[i], i)\n",
+    "    return pop_ev_ok\n",
+    "\n",
+    "pop_vivante(pmort, pop_init)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On écrit ensuite la fonction finale qui nous donne après 10 ans la population (naissance puis mort)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 703,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population à la génération suivante\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 28, 10: 0, 20: 0, 30: 45, 40: 45, 50: 7, 60: 3, 70: 0, 80: 0, 90: 0}"
+      ]
+     },
+     "execution_count": 703,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pop_next(pop, p, pmort):\n",
+    "    popnext = pop_decade(pop, p)\n",
+    "    popnext = pop_vivante(pmort, popnext)\n",
+    "    \n",
+    "    return popnext\n",
+    "\n",
+    "print(\"Population à la génération suivante\")\n",
+    "pop_next(pop_init, p, pmort)"
    ]
   },
   {
