Code jusqu a la pop apres d decade (pop_after_d) Léonard

--- a/JN_Mars.ipynb
+++ b/JN_Mars.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
     "\n",
     "p10 = {0 : 1.0}\n",
     "\n",
-    "p20 = {0 : 0.9,\n",
-    "     1 : 0.08,\n",
-    "     2 : 0.02}\n",
-    "\n",
-    "p30 = {0 : 0.7,\n",
+    "p20 = {0 : 0.7,\n",
     "     1 : 0.2,\n",
     "     2 : 0.1}\n",
+    "\n",
+    "p30 = {0 : 0.5,\n",
+    "     1 : 0.35,\n",
+    "     2 : 0.15}\n",
     "\n",
     "p40 = {0 : 0.75,\n",
     "     1 : 0.15,\n",
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28"
+       "53"
       ]
      },
-     "execution_count": 624,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 27, 10: 0, 20: 0, 30: 50, 40: 50, 50: 10, 60: 5, 70: 0, 80: 0, 90: 0}"
+       "{0: 62, 10: 0, 20: 0, 30: 50, 40: 50, 50: 10, 60: 5, 70: 0, 80: 0, 90: 0}"
       ]
      },
-     "execution_count": 672,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,22 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionnaire représentant la distribution de probabilité de mourir.\n",
     "# clef = age et valeur = probabilité\n",
     "\n",
-    "pmort = {0 : 0.2,\n",
-    "    10 : 0.05,\n",
-    "    20 : 0.05,\n",
-    "    30 : 0.1,\n",
-    "    40 : 0.15,\n",
-    "    50 : 0.18,\n",
-    "    60 : 0.25,\n",
-    "    70 : 0.31,\n",
-    "    80 : 0.60,\n",
+    "pmort = {0 : 0.1,\n",
+    "    10 : 0.02,\n",
+    "    20 : 0.02,\n",
+    "    30 : 0.05,\n",
+    "    40 : 0.08,\n",
+    "    50 : 0.09,\n",
+    "    60 : 0.12,\n",
+    "    70 : 0.15,\n",
+    "    80 : 0.30,\n",
     "    90 : 1.0}"
    ]
   },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "0"
       ]
      },
-     "execution_count": 627,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "4"
       ]
      },
-     "execution_count": 666,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 0, 10: 0, 20: 45, 30: 39, 40: 9, 50: 4, 60: 0, 70: 0, 80: 0, 90: 0}"
+       "{0: 0, 10: 0, 20: 50, 30: 50, 40: 10, 50: 4, 60: 0, 70: 0, 80: 0, 90: 0}"
       ]
      },
-     "execution_count": 671,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -429,16 +429,20 @@
     {
      "data": {
       "text/plain": [
-       "{0: 28, 10: 0, 20: 0, 30: 45, 40: 45, 50: 7, 60: 3, 70: 0, 80: 0, 90: 0}"
+       "{0: 58, 10: 0, 20: 0, 30: 47, 40: 47, 50: 8, 60: 4, 70: 0, 80: 0, 90: 0}"
       ]
      },
-     "execution_count": 703,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def pop_next(pop, p, pmort):\n",
+    "    \"\"\"\n",
+    "    dict[int:int]*dict[int:dict[int:float]]*dict[int:float]->dict[int:int]\n",
+    "    renvoie la population a la génération suivante\n",
+    "    \"\"\"\n",
     "    popnext = pop_decade(pop, p)\n",
     "    popnext = pop_vivante(pmort, popnext)\n",
     "    \n",
@@ -446,6 +450,326 @@
     "\n",
     "print(\"Population à la génération suivante\")\n",
     "pop_next(pop_init, p, pmort)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On introduit ensuite une fonction pour avoir la population Pop après une nombre de decade d."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population à la decade d\n",
+      "Decade =  10\n",
+      "age = 0 , Population =  55\n",
+      "age = 10 , Population =  0\n",
+      "age = 20 , Population =  0\n",
+      "age = 30 , Population =  50\n",
+      "age = 40 , Population =  45\n",
+      "age = 50 , Population =  10\n",
+      "age = 60 , Population =  2\n",
+      "age = 70 , Population =  0\n",
+      "age = 80 , Population =  0\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  162\n",
+      " \n",
+      "Decade =  20\n",
+      "age = 0 , Population =  47\n",
+      "age = 10 , Population =  52\n",
+      "age = 20 , Population =  0\n",
+      "age = 30 , Population =  0\n",
+      "age = 40 , Population =  48\n",
+      "age = 50 , Population =  44\n",
+      "age = 60 , Population =  10\n",
+      "age = 70 , Population =  2\n",
+      "age = 80 , Population =  0\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  203\n",
+      " \n",
+      "Decade =  30\n",
+      "age = 0 , Population =  32\n",
+      "age = 10 , Population =  46\n",
+      "age = 20 , Population =  51\n",
+      "age = 30 , Population =  0\n",
+      "age = 40 , Population =  0\n",
+      "age = 50 , Population =  47\n",
+      "age = 60 , Population =  37\n",
+      "age = 70 , Population =  9\n",
+      "age = 80 , Population =  1\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  223\n",
+      " \n",
+      "Decade =  40\n",
+      "age = 0 , Population =  15\n",
+      "age = 10 , Population =  32\n",
+      "age = 20 , Population =  45\n",
+      "age = 30 , Population =  48\n",
+      "age = 40 , Population =  0\n",
+      "age = 50 , Population =  0\n",
+      "age = 60 , Population =  44\n",
+      "age = 70 , Population =  32\n",
+      "age = 80 , Population =  5\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  221\n",
+      " \n",
+      "Decade =  50\n",
+      "age = 0 , Population =  42\n",
+      "age = 10 , Population =  15\n",
+      "age = 20 , Population =  31\n",
+      "age = 30 , Population =  45\n",
+      "age = 40 , Population =  46\n",
+      "age = 50 , Population =  0\n",
+      "age = 60 , Population =  0\n",
+      "age = 70 , Population =  38\n",
+      "age = 80 , Population =  20\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  237\n",
+      " \n",
+      "Decade =  60\n",
+      "age = 0 , Population =  52\n",
+      "age = 10 , Population =  41\n",
+      "age = 20 , Population =  15\n",
+      "age = 30 , Population =  30\n",
+      "age = 40 , Population =  38\n",
+      "age = 50 , Population =  42\n",
+      "age = 60 , Population =  0\n",
+      "age = 70 , Population =  0\n",
+      "age = 80 , Population =  29\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  247\n",
+      " \n",
+      "Decade =  70\n",
+      "age = 0 , Population =  27\n",
+      "age = 10 , Population =  51\n",
+      "age = 20 , Population =  40\n",
+      "age = 30 , Population =  14\n",
+      "age = 40 , Population =  27\n",
+      "age = 50 , Population =  35\n",
+      "age = 60 , Population =  32\n",
+      "age = 70 , Population =  0\n",
+      "age = 80 , Population =  0\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  226\n",
+      " \n",
+      "Decade =  80\n",
+      "age = 0 , Population =  31\n",
+      "age = 10 , Population =  27\n",
+      "age = 20 , Population =  48\n",
+      "age = 30 , Population =  37\n",
+      "age = 40 , Population =  12\n",
+      "age = 50 , Population =  26\n",
+      "age = 60 , Population =  32\n",
+      "age = 70 , Population =  27\n",
+      "age = 80 , Population =  0\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  240\n",
+      " \n",
+      "Decade =  90\n",
+      "age = 0 , Population =  41\n",
+      "age = 10 , Population =  31\n",
+      "age = 20 , Population =  26\n",
+      "age = 30 , Population =  46\n",
+      "age = 40 , Population =  35\n",
+      "age = 50 , Population =  10\n",
+      "age = 60 , Population =  22\n",
+      "age = 70 , Population =  28\n",
+      "age = 80 , Population =  17\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  256\n",
+      " \n",
+      "Decade =  100\n",
+      "age = 0 , Population =  42\n",
+      "age = 10 , Population =  41\n",
+      "age = 20 , Population =  30\n",
+      "age = 30 , Population =  25\n",
+      "age = 40 , Population =  41\n",
+      "age = 50 , Population =  31\n",
+      "age = 60 , Population =  7\n",
+      "age = 70 , Population =  21\n",
+      "age = 80 , Population =  22\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  260\n",
+      " \n",
+      "Decade =  110\n",
+      "age = 0 , Population =  39\n",
+      "age = 10 , Population =  42\n",
+      "age = 20 , Population =  40\n",
+      "age = 30 , Population =  29\n",
+      "age = 40 , Population =  23\n",
+      "age = 50 , Population =  33\n",
+      "age = 60 , Population =  27\n",
+      "age = 70 , Population =  4\n",
+      "age = 80 , Population =  15\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  252\n",
+      " \n",
+      "Decade =  120\n",
+      "age = 0 , Population =  44\n",
+      "age = 10 , Population =  39\n",
+      "age = 20 , Population =  41\n",
+      "age = 30 , Population =  39\n",
+      "age = 40 , Population =  28\n",
+      "age = 50 , Population =  22\n",
+      "age = 60 , Population =  32\n",
+      "age = 70 , Population =  26\n",
+      "age = 80 , Population =  3\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  274\n",
+      " \n",
+      "Decade =  130\n",
+      "age = 0 , Population =  41\n",
+      "age = 10 , Population =  43\n",
+      "age = 20 , Population =  38\n",
+      "age = 30 , Population =  38\n",
+      "age = 40 , Population =  34\n",
+      "age = 50 , Population =  25\n",
+      "age = 60 , Population =  19\n",
+      "age = 70 , Population =  28\n",
+      "age = 80 , Population =  18\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  284\n",
+      " \n",
+      "Decade =  140\n",
+      "age = 0 , Population =  65\n",
+      "age = 10 , Population =  41\n",
+      "age = 20 , Population =  41\n",
+      "age = 30 , Population =  36\n",
+      "age = 40 , Population =  36\n",
+      "age = 50 , Population =  33\n",
+      "age = 60 , Population =  21\n",
+      "age = 70 , Population =  15\n",
+      "age = 80 , Population =  17\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  305\n",
+      " \n",
+      "Decade =  150\n",
+      "age = 0 , Population =  44\n",
+      "age = 10 , Population =  65\n",
+      "age = 20 , Population =  41\n",
+      "age = 30 , Population =  38\n",
+      "age = 40 , Population =  30\n",
+      "age = 50 , Population =  31\n",
+      "age = 60 , Population =  29\n",
+      "age = 70 , Population =  18\n",
+      "age = 80 , Population =  9\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  305\n",
+      " \n",
+      "Decade =  160\n",
+      "age = 0 , Population =  52\n",
+      "age = 10 , Population =  43\n",
+      "age = 20 , Population =  63\n",
+      "age = 30 , Population =  40\n",
+      "age = 40 , Population =  37\n",
+      "age = 50 , Population =  27\n",
+      "age = 60 , Population =  29\n",
+      "age = 70 , Population =  25\n",
+      "age = 80 , Population =  12\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  328\n",
+      " \n",
+      "Decade =  170\n",
+      "age = 0 , Population =  54\n",
+      "age = 10 , Population =  52\n",
+      "age = 20 , Population =  41\n",
+      "age = 30 , Population =  59\n",
+      "age = 40 , Population =  35\n",
+      "age = 50 , Population =  35\n",
+      "age = 60 , Population =  26\n",
+      "age = 70 , Population =  27\n",
+      "age = 80 , Population =  14\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  343\n",
+      " \n",
+      "Decade =  180\n",
+      "age = 0 , Population =  66\n",
+      "age = 10 , Population =  53\n",
+      "age = 20 , Population =  50\n",
+      "age = 30 , Population =  37\n",
+      "age = 40 , Population =  54\n",
+      "age = 50 , Population =  31\n",
+      "age = 60 , Population =  33\n",
+      "age = 70 , Population =  25\n",
+      "age = 80 , Population =  19\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  368\n",
+      " \n",
+      "Decade =  190\n",
+      "age = 0 , Population =  49\n",
+      "age = 10 , Population =  66\n",
+      "age = 20 , Population =  52\n",
+      "age = 30 , Population =  45\n",
+      "age = 40 , Population =  34\n",
+      "age = 50 , Population =  52\n",
+      "age = 60 , Population =  27\n",
+      "age = 70 , Population =  28\n",
+      "age = 80 , Population =  21\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  374\n",
+      " \n",
+      "Decade =  200\n",
+      "age = 0 , Population =  53\n",
+      "age = 10 , Population =  48\n",
+      "age = 20 , Population =  65\n",
+      "age = 30 , Population =  50\n",
+      "age = 40 , Population =  40\n",
+      "age = 50 , Population =  32\n",
+      "age = 60 , Population =  48\n",
+      "age = 70 , Population =  25\n",
+      "age = 80 , Population =  27\n",
+      "age = 90 , Population =  0\n",
+      "Population totale =  388\n",
+      " \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 53, 10: 48, 20: 65, 30: 50, 40: 40, 50: 32, 60: 48, 70: 25, 80: 27, 90: 0}"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pop_after_d(pop, p , pmort, d):\n",
+    "    \"\"\"\n",
+    "    dict[int:int]*dict[int:dict[int:float]]*dict[int:float]*int->dict[int:int]\n",
+    "    Renvoie la population à la decade d\n",
+    "    \"\"\"\n",
+    "    for i in range(d):\n",
+    "        print(\"Decade = \", ((i + 1)*10))\n",
+    "        pop = pop_next(pop, p, pmort)\n",
+    "        pop_totale = 0\n",
+    "        j = 0\n",
+    "        while j <= 90 : \n",
+    "            print(\"age =\", j,\", Population = \",pop[j])\n",
+    "            pop_totale = pop_totale + pop[j]\n",
+    "            j = j + 10\n",
+    "        print(\"Population totale = \", pop_totale)\n",
+    "        print(\" \")\n",
+    "    return pop\n",
+    "\n",
+    "print(\"Population à la decade d\")\n",
+    "pop_after_d(pop_init, p, pmort, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fonction pour savoir ou bout de combien de decade on arrive "
    ]
   },
   {
