Ajout des parametre variable sur le dico de mort Victor

--- a/JN_Mars.ipynb
+++ b/JN_Mars.ipynb
@@ -907,6 +907,88 @@
     "compte_couple(Pop_totale)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fonction ressources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#taux de ressources necessaire\n",
+    "coefress=0.002   #coef de la fonction affine\n",
+    "resini=0.9      #taux de ressource initial envoyé de la terre\n",
+    "rTerre=ressource_terre(resini,coefress,d)     #ressources provenant de la terre \n",
+    "rPlanet=0   #ressources récolté sur place\n",
+    "\n",
+    "coef=1          #coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ressource_terre(ini,x,n):\n",
+    "    \"\"\"int->int\n",
+    "    retourne le taux de ressource envoyé de la terre en fonction de decade n en fonction de ini et x\"\"\"\n",
+    "    t=0\n",
+    "    while t<=n+1:    \n",
+    "        ini=ini+x*t\n",
+    "        t=t+10\n",
+    "    return ini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def impact_ressources(t,m,dpm):\n",
+    "        \"\"\"float**2*dict[int:float]->dict[int:float]\n",
+    "        retourne le dictionnaire pmort avec l'impact des ressources\"\"\"\n",
+    "        j=10\n",
+    "        while j <= 90 : \n",
+    "            dpm[j]= round(dpm[j]*(t**m)/m,3)\n",
+    "            j=j+10\n",
+    "        return dpm\n",
+    "\n",
+    "print(impact_ressources(ressource_terre(resini,coefress,1),coef,pmort))\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def impact_ressources_decade(t,m,nmax,dpm):\n",
+    "    \"\"\"int**3*dict[int:float]\n",
+    "    retourne le dictionnaire pmort avec l'impact des ressources en fonction des decades\n",
+    "    avec n la decade max\"\"\"\n",
+    "    i=0\n",
+    "    while i<=nmax:\n",
+    "        print(impact_ressources(ressource_terre(resini,coefress,i),coef,pmort))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
