travail final code léonard

--- a/JN_Mars.ipynb
+++ b/JN_Mars.ipynb
@@ -1576,7 +1576,7 @@
    "source": [
     "On va essayer de faire deux fonctions plots différentes.\n",
     "\n",
-    "La première va nous montrer la répartition de la population en fonction de l'age et du sexe de chaque personne pour une decade donnée.\n",
+    "La première va nous montrer la répartition de la population en fonction du sexe et de l'age de chaque personne pour une decade donnée.\n",
     "\n",
     "La deuxième va nous montrer l'évolution de la population totale, homme et femme depuis le début jusqu'à la décénnie donnée."
    ]
